<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/appitemid"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/regitemid"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/register" />
        <item
            android:id="@+id/loginitemid"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/logging" />
        <item
            android:id="@+id/logoutitemid"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/logout" />
    </group>


</menu>
