<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textbackground"
    android:orientation="vertical"
    tools:context=".Company_actions">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/operation"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


    <android.support.v7.widget.CardView
        android:layout_width="410dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/view_profile"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="40dp"
                android:background="@color/light_pink"
                android:text="@string/viewcompanyprof"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/update_profile"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="40dp"
                android:background="@color/light_pink"
                android:text="@string/companyprof"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/view_users"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="40dp"
                android:background="@color/light_pink"
                android:text="@string/clients"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/view_jobs"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_pink"
                android:text="@string/updatejob"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>