<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textbackground"
    tools:context=".Applicants_Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/appinfo"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/work2s" />


        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/deatailsinfo"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/institution"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25sp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/instituion"
                        android:inputType="text"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp"
                        android:textStyle="italic" />

                    <EditText
                        android:id="@+id/areaof_study"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25sp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/area"
                        android:inputType="textEmailAddress"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25sp"
                        android:layout_marginTop="25dp"
                        android:text="@string/level1"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/level_ofStudy"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25sp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/level"
                        android:inputType="text"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25sp"
                        android:layout_marginTop="25dp"
                        android:text="@string/manyyears"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/experience"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25sp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/year"
                        android:inputType="text"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25sp"
                        android:layout_marginTop="25dp"
                        android:text="@string/reason"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/reason"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25sp"
                        android:layout_marginTop="25dp"
                        android:inputType="textPassword"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp" />

                    <DatePicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </DatePicker>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/App_upload"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="38dp"
                    android:layout_marginBottom="5dp"
                    android:text="UPLOAD DATA"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>