<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Applicants_details"
    android:background="@drawable/textbackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/appinfo"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/work2s" />


        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/deatailsinfo"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/institution"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:hint="@string/instituion"
                        android:inputType="text"
                        android:shadowColor="@color/white"
                        android:padding="10dp"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp"
                        android:textStyle="italic"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/areaof_study"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:hint="@string/area"
                        android:padding="10dp"

                        android:inputType="textEmailAddress"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp"
                        android:textStyle="italic"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="25dp"
                        android:text="@string/level1"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/level_ofStudy"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:hint="@string/level"
                        android:inputType="text"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp"
                        android:textStyle="italic"
                        android:entries="@array/levelstudy"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="25dp"
                        android:text="@string/manyyears"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/experience"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:hint="@string/year"
                        android:inputType="text"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp"
                        android:textStyle="italic"
                        android:entries="@array/experience"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="25dp"
                        android:text="@string/reason"
                        android:textSize="25sp"
                        android:textStyle="bold"

                        />

                    <EditText
                        android:id="@+id/reasoning"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:inputType="textMultiLine"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/grayish"
                        android:textSize="25sp"
                        android:textStyle="normal"
                        android:gravity="start"
                        android:hint="@string/some"
                        android:minHeight="200dp"
                        android:padding="10dp"
                        android:importantForAutofill="no" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="25dp"
                        android:text="@string/gender"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"

                        android:id="@+id/radiogroup">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center">
                            <RadioButton
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/male"
                                android:text="male"
                                android:textSize="30sp"
                                tools:ignore="HardcodedText"
                                android:checked ="true"
                                />
                            <RadioButton
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/female"
                                android:text="female"
                                android:textSize="30sp"/>

                        </LinearLayout>

                    </RadioGroup>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/App_uploaddetails"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="UPLOAD DATA"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>